desktop-base (9.0.0~exp2) UNRELEASED; urgency=medium

  [ Aurélien COUDERC ]
  * Remove Moreblue theme from Lenny.
  * Generate all GRUB bitmaps from SVG at build time instead of versionning
    them.

  * Fix detection of update-initramfs. (Closes: #843727)

 -- Aurélien COUDERC <zecoucou@free.fr>  Mon, 07 Nov 2016 22:28:06 +0100

desktop-base (9.0.0~exp1) experimental; urgency=medium

  [ Aurélien COUDERC ]
  * Initial support for Soft Waves theme by Juliette Belin.
    - Default theme for GRUB (Closes: #598776, #773369)
    - Default theme for Gnome wallpaper and lock screen
    - Default theme for Plasma 5 wallpaper (Closes: #831730)
    - Theme available for SDDM login and lock screen
    - debian/copyright updated
  * Initial support for global theme switching via alternatives

  * Remove references to long gone KDE3 globals in maintainer scripts.
    (Closes: #659549)
  * README.Debian: inform about updating initrds too. (Closes: #612163)
  * Document use of sync use before grub update in postinst. (Closes: #611364)
  * Add SDDM theming for KDE/Plasma 5:
    - Based on default SDDM theme breeze + Debian theme background.
    - Can be configured with alternatives (also works in lightdm).
   (Closes: #415064, #608523, #611170, #670866, #762276)
  * Remove deprecated ksplash and kdm from KDE4. (Closes: #607842)
  * Remove deprecated splash options from Gnome 2.
  * Some cleanup in maintainer scripts to correctly handle alternatives.
    (Closes: #773404)

  * Fix lintian warning command-with-path-in-maintainer-script in
    postinst script.
  * Bump Standards-Version to 3.9.8 (no changes needed).

  [ Yves-Alexis Perez ]
  * Also use Debian wallpaper for second monitor on Xfce.       closes: #785371

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 07 Nov 2016 21:32:30 +0100

desktop-base (8.0.2) unstable; urgency=medium

  * Reinstate login-background.svg. Closes: #773015.

 -- Josselin Mouette <joss@debian.org>  Sat, 13 Dec 2014 20:52:34 +0100
