@@ -11,7 +11,7 @@ clean:
 
 install:
 	install -d $(DESTDIR)/$(dir)
-	$(INSTALL) $(wildcard *.png) $(DESTDIR)/$(dir)
+	$(INSTALL) $(wildcard *.png *.sh) $(DESTDIR)/$(dir)
 
 grub-4x3.png: grub-4x3.svg
 	rsvg-convert $< > $@
