@@ -1,0 +1,3 @@
+WALLPAPER=/usr/share/images/desktop-base/desktop-grub.png
+COLOR_NORMAL=light-gray/black
+COLOR_HIGHLIGHT=black/white
